added subcategories to skin settings
changed structure of builtin controls
added attributes to JS block registration
removed top margin from meta items

--- a/src/gutenberg/components/icons-selector/style.scss
+++ b/src/gutenberg/components/icons-selector/style.scss
@@ -39,7 +39,8 @@
   }
 }
 
-.vpf-control-wrap-icons_selector:has(+ .vpf-control-wrap-category_tabs) {
+.vpf-control-wrap-icons_selector:has(+ .vpf-control-wrap-category_tabs),
+.vpf-control-wrap-icons_selector:has(+ .vpf-control-wrap-category_collapse) {
   margin-bottom: 0;
 }
 
