--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -9,6 +9,7 @@
 @import "./components/aspect-ratio/style";
 @import "./components/classes-tree/style";
 @import "./components/code-editor/style";
+@import "./components/collapse-control/style";
 @import "./components/color-picker/style";
 @import "./components/controls-render/style";
 @import "./components/dropdown/style";
