--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -13,8 +13,7 @@
 
   // Meta.
   --vp-items-style-default--meta__color: inherit;
-  --vp-items-style-default--meta__padding-v: 1.5em;
-  --vp-items-style-default--meta__padding-h: 2em;
+  --vp-items-style-default--meta__padding: 1.5em 2em;
   --vp-items-style-default--meta-items__gap: 1.5em;
 
   // Overlay.
