--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -94,9 +94,10 @@
   // meta
   .vp-portfolio__item-meta {
     position: relative;
-    padding: var(--vp-items-style-default--meta__padding-v) var(--vp-items-style-default--meta__padding-h);
+    padding: var(--vp-items-style-default--meta__padding);
 
     > * {
+      margin-top: 0;
       margin-bottom: var(--vp-items-style-default--meta-items__gap);
     }
 
