--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -12,19 +12,7 @@
     border-radius: var(--vp-items-style-emerge--image__border-radius);
   }
 
-  .vp-portfolio__item a {
-    color: var(--vp-items-style-emerge--links__color);
-    text-decoration: var(--vp-items-style-emerge--links__text-decoration);
-    outline: none;
-    box-shadow: none;
-
-    &:hover,
-    &:focus {
-      color: var(--vp-items-style-emerge--links-hover__color);
-    }
-  }
-
-  .vp-portfolio__item-img-overlay {
+  .vp-portfolio__item-overlay {
     position: absolute;
     top: 0;
     right: 0;
@@ -37,12 +25,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--vp-items-style-emerge--img-overlay__background-color);
+    background-color: var(--vp-items-style-emerge--overlay__background-color);
     opacity: 0;
     transition: var(--vp-items-style-emerge-transition-duration) opacity var(--vp-items-style-emerge-transition-easing);
   }
 
-  .vp-portfolio__item-overlay {
+  .vp-portfolio__item-caption {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -56,19 +44,31 @@
     width: 100%;
     min-height: 50px;
     max-height: 100%;
-    color: var(--vp-items-style-emerge--overlay__color);
-    background-color: var(--vp-items-style-emerge--overlay__background-color);
-    transition: var(--vp-items-style-emerge--overlay__transition-duration) transform var(--vp-items-style-emerge--overlay__transition-easing), var(--vp-items-style-emerge--overlay__transition-duration) clip-path var(--vp-items-style-emerge--overlay__transition-easing);
+    color: var(--vp-items-style-emerge--caption__color);
+    background-color: var(--vp-items-style-emerge--caption__background-color);
+    transition: var(--vp-items-style-emerge--caption__transition-duration) transform var(--vp-items-style-emerge--caption__transition-easing), var(--vp-items-style-emerge--caption__transition-duration) clip-path var(--vp-items-style-emerge--caption__transition-easing);
     transform: translateY(100%);
 
     @supports (clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%)) {
-      padding-top: var(--vp-items-style-emerge--overlay-skew__height);
-      clip-path: polygon(0 var(--vp-items-style-emerge--overlay-skew__clip-left), 100% var(--vp-items-style-emerge--overlay-skew__clip-right), 100% 100%, 0% 100%);
+      padding-top: var(--vp-items-style-emerge--caption-skew__height);
+      clip-path: polygon(0 var(--vp-items-style-emerge--caption-skew__clip-left), 100% var(--vp-items-style-emerge--caption-skew__clip-right), 100% 100%, 0% 100%);
+    }
+
+    a {
+      color: var(--vp-items-style-emerge--caption-links__color);
+      text-decoration: var(--vp-items-style-emerge--caption-links__text-decoration);
+      outline: none;
+      box-shadow: none;
+
+      &:hover,
+      &:focus {
+        color: var(--vp-items-style-emerge--caption-links-hover__color);
+      }
     }
   }
 
   // fix some themes figcaption styles.
-  figcaption.vp-portfolio__item-overlay {
+  figcaption.vp-portfolio__item-caption {
     font-style: inherit;
   }
 
@@ -83,7 +83,7 @@
   .vp-portfolio__item-meta {
     width: 100%;
     max-height: 100%;
-    padding: var(--vp-items-style-emerge--overlay__padding-v) var(--vp-items-style-emerge--overlay__padding-h);
+    padding: var(--vp-items-style-emerge--caption__padding);
     color: inherit;
 
     // Indexes for staggering.
@@ -94,6 +94,7 @@
     }
 
     > * {
+      margin-top: 0;
       margin-bottom: var(--vp-items-style-emerge--meta-items__gap);
       opacity: 0;
       transition-delay: calc(var(--vp-items-style-emerge--meta-staggering__transition-delay) * var(--vp-items-style-emerge--meta-staggering__index));
@@ -195,43 +196,19 @@
     transition: transform var(--vp-items-style-emerge-transition-duration) var(--vp-items-style-emerge-transition-easing), opacity var(--vp-items-style-emerge-transition-duration) var(--vp-items-style-emerge-transition-easing);
   }
 
-  // Image Overlay
-  &.vp-portfolio__items-show-img-overlay-hover .vp-portfolio__item:hover,
-  &.vp-portfolio__items-show-img-overlay-hover .vp-portfolio__item-focus {
-    .vp-portfolio__item-img-overlay {
-      opacity: 1;
-    }
-  }
-
-  &.vp-portfolio__items-show-img-overlay-default {
-    .vp-portfolio__item-img-overlay {
-      opacity: 1;
-    }
-
-    .vp-portfolio__item:hover,
-    .vp-portfolio__item-focus {
-      .vp-portfolio__item-img-overlay {
-        opacity: 0;
-      }
-    }
-  }
-
-  &.vp-portfolio__items-show-img-overlay-always {
-    .vp-portfolio__item-img-overlay {
-      opacity: 1;
-    }
-  }
-
-  // Meta Overlay
   &.vp-portfolio__items-show-overlay-hover .vp-portfolio__item:hover,
   &.vp-portfolio__items-show-overlay-hover .vp-portfolio__item-focus {
+    .vp-portfolio__item-overlay {
+      opacity: 1;
+    }
+
     .vp-portfolio__item-img img {
       transform: var(--vp-items-style-emerge--image-hover__transform);
     }
 
-    .vp-portfolio__item-overlay {
-      --vp-items-style-emerge--overlay-skew__clip-left: var(--vp-items-style-emerge--overlay-skew-hover__clip-left);
-      --vp-items-style-emerge--overlay-skew__clip-right: var(--vp-items-style-emerge--overlay-skew-hover__clip-right);
+    .vp-portfolio__item-caption {
+      --vp-items-style-emerge--caption-skew__clip-left: var(--vp-items-style-emerge--caption-skew-hover__clip-left);
+      --vp-items-style-emerge--caption-skew__clip-right: var(--vp-items-style-emerge--caption-skew-hover__clip-right);
 
       transform: translateY(0);
     }
@@ -243,13 +220,17 @@
   }
 
   &.vp-portfolio__items-show-overlay-default {
+    .vp-portfolio__item-overlay {
+      opacity: 1;
+    }
+
     .vp-portfolio__item-img img {
       transform: var(--vp-items-style-emerge--image-hover__transform);
     }
 
-    .vp-portfolio__item-overlay {
-      --vp-items-style-emerge--overlay-skew__clip-left: var(--vp-items-style-emerge--overlay-skew-hover__clip-left);
-      --vp-items-style-emerge--overlay-skew__clip-right: var(--vp-items-style-emerge--overlay-skew-hover__clip-right);
+    .vp-portfolio__item-caption {
+      --vp-items-style-emerge--caption-skew__clip-left: var(--vp-items-style-emerge--caption-skew-hover__clip-left);
+      --vp-items-style-emerge--caption-skew__clip-right: var(--vp-items-style-emerge--caption-skew-hover__clip-right);
 
       transform: translateY(0);
     }
@@ -261,13 +242,17 @@
 
     .vp-portfolio__item:hover,
     .vp-portfolio__item-focus {
+      .vp-portfolio__item-overlay {
+        opacity: 0;
+      }
+
       .vp-portfolio__item-img img {
         transform: var(--vp-items-style-emerge--image__transform);
       }
 
-      .vp-portfolio__item-overlay {
-        --vp-items-style-emerge--overlay-skew__clip-left: var(--vp-items-style-emerge--overlay-skew__height);
-        --vp-items-style-emerge--overlay-skew__clip-right: var(--vp-items-style-emerge--overlay-skew__height);
+      .vp-portfolio__item-caption {
+        --vp-items-style-emerge--caption-skew__clip-left: var(--vp-items-style-emerge--caption-skew__height);
+        --vp-items-style-emerge--caption-skew__clip-right: var(--vp-items-style-emerge--caption-skew__height);
 
         transform: translateY(100%);
       }
@@ -280,13 +265,17 @@
   }
 
   &.vp-portfolio__items-show-overlay-always {
+    .vp-portfolio__item-overlay {
+      opacity: 1;
+    }
+
     .vp-portfolio__item-img img {
       transform: var(--vp-items-style-emerge--image-hover__transform);
     }
 
-    .vp-portfolio__item-overlay {
-      --vp-items-style-emerge--overlay-skew__clip-left: var(--vp-items-style-emerge--overlay-skew-hover__clip-left);
-      --vp-items-style-emerge--overlay-skew__clip-right: var(--vp-items-style-emerge--overlay-skew-hover__clip-right);
+    .vp-portfolio__item-caption {
+      --vp-items-style-emerge--caption-skew__clip-left: var(--vp-items-style-emerge--caption-skew-hover__clip-left);
+      --vp-items-style-emerge--caption-skew__clip-right: var(--vp-items-style-emerge--caption-skew-hover__clip-right);
 
       transform: translateY(0);
     }
