added support for Pro option - Blend Mode for Skins

--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -33,6 +33,7 @@
     color: var(--vp-items-style-fade--overlay__color);
     text-decoration: var(--vp-items-style-fade--overlay__text-decoration);
     background-color: var(--vp-items-style-fade--overlay__background-color);
+    mix-blend-mode: var(--vp-items-style-fade--overlay__mix-blend-mode);
     opacity: 0;
     transition: var(--vp-items-style-fade-transition-duration) opacity var(--vp-items-style-fade-transition-easing);
   }
