--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -20,6 +20,7 @@
   // Overlay.
   --vp-items-style-default--overlay__color: #fff;
   --vp-items-style-default--overlay__background-color: transparent;
+  --vp-items-style-default--overlay__mix-blend-mode: initial;
 
   // Meta Icon.
   --vp-items-style-default--meta-icon__font-size: 2em;
