--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -27,6 +27,7 @@
     align-items: center;
     justify-content: center;
     background-color: var(--vp-items-style-emerge--overlay__background-color);
+    mix-blend-mode: var(--vp-items-style-emerge--overlay__mix-blend-mode);
     opacity: 0;
     transition: var(--vp-items-style-emerge-transition-duration) opacity var(--vp-items-style-emerge-transition-easing);
   }
@@ -48,6 +49,7 @@
     max-height: 100%;
     color: var(--vp-items-style-emerge--caption__color);
     background-color: var(--vp-items-style-emerge--caption__background-color);
+    mix-blend-mode: var(--vp-items-style-emerge--caption__mix-blend-mode);
     transition: var(--vp-items-style-emerge--caption__transition-duration) transform var(--vp-items-style-emerge--caption__transition-easing), var(--vp-items-style-emerge--caption__transition-duration) clip-path var(--vp-items-style-emerge--caption__transition-easing);
     transform: translateY(100%);
 
