--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -10,6 +10,9 @@
     // https://github.com/nk-crew/visual-portfolio/issues/150
     z-index: 0;
     border-radius: var(--vp-items-style-fade--image__border-radius);
+    transition-timing-function: var(--vp-items-style-fade--image__transition-easing);
+    transition-duration: var(--vp-items-style-fade--image__transition-duration);
+    transition-property: border-radius;
   }
 
   .vp-portfolio__item a {
@@ -34,7 +37,10 @@
     text-decoration: var(--vp-items-style-fade--overlay__text-decoration);
     background-color: var(--vp-items-style-fade--overlay__background-color);
     opacity: 0;
-    transition: var(--vp-items-style-fade-transition-duration) opacity var(--vp-items-style-fade-transition-easing);
+    transition-timing-function: var(--vp-items-style-fade--overlay__transition-easing);
+    transition-duration: var(--vp-items-style-fade--overlay__transition-duration);
+    transition-property: opacity, transform;
+    transform: var(--vp-items-style-fade--overlay__transform);
   }
 
   // fix some themes figcaption styles.
@@ -184,7 +190,10 @@
     // Fix FireFox image blinking
     // https://github.com/nk-crew/visual-portfolio/issues/92
     z-index: 1;
-    transition: var(--vp-items-style-fade-transition-duration) transform var(--vp-items-style-fade-transition-easing), var(--vp-items-style-fade-transition-duration) opacity var(--vp-items-style-fade-transition-easing);
+    transition-timing-function: var(--vp-items-style-fade--image__transition-easing);
+    transition-duration: var(--vp-items-style-fade--image__transition-duration);
+    transition-property: opacity, transform;
+    transform: var(--vp-items-style-fade--image__transform);
   }
 
   // Overlay
