--- a/src/templates/items-list/items-style/fly/_variables.scss
+++ b/src/templates/items-list/items-style/fly/_variables.scss
@@ -7,6 +7,8 @@
 
   // Image.
   --vp-items-style-fly--image__border-radius: 0;
+  --vp-items-style-fly--image__transform: none;
+  --vp-items-style-fly--image-hover__transform: none;
 
   // Overlay.
   --vp-items-style-fly--overlay__text-decoration: none;
@@ -42,4 +44,14 @@
   // Meta Excerpt.
   --vp-items-style-fly--meta-excerpt__line-height: 1.5;
   --vp-items-style-fly--meta-excerpt__opacity: 0.8;
+
+  // Transitions.
+  --vp-items-style-fly-transition-duration: var(--vp-interactive__transition-duration);
+  --vp-items-style-fly-transition-easing: var(--vp-interactive__transition-easing);
+  --vp-items-style-fly--image__transition-duration: var(--vp-items-style-fly-transition-duration);
+  --vp-items-style-fly--image__transition-easing: var(--vp-items-style-fly-transition-easing);
+  --vp-items-style-fly--overlay__transition-duration: var(--vp-items-style-fly-transition-duration);
+  --vp-items-style-fly--overlay__transition-easing: var(--vp-items-style-fly-transition-easing);
+  --vp-items-style-fly--caption__transition-duration: var(--vp-items-style-fly-transition-duration);
+  --vp-items-style-fly--caption__transition-easing: var(--vp-items-style-fly-transition-easing);
 }
