remove dimensions subcategory - move all dimensions inside `caption` and `overlay` subcategories
added overlay margin and border radius support

--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -20,6 +20,8 @@
   // Overlay.
   --vp-items-style-default--overlay__color: #fff;
   --vp-items-style-default--overlay__background-color: transparent;
+  --vp-items-style-default--overlay__border-radius: 0;
+  --vp-items-style-default--overlay__margin: 0;
 
   // Meta Icon.
   --vp-items-style-default--meta-icon__font-size: 2em;
