--- a/src/templates/items-list/items-style/emerge/_variables.scss
+++ b/src/templates/items-list/items-style/emerge/_variables.scss
@@ -9,6 +9,8 @@
 
   // Image Overlay.
   --vp-items-style-emerge--overlay__background-color: transparent;
+  --vp-items-style-emerge--overlay__margin: 0;
+  --vp-items-style-emerge--overlay__border-radius: 0;
 
   // Caption.
   --vp-items-style-emerge--caption__min-height: 40px;
