--- a/src/templates/items-list/items-style/fade/_variables.scss
+++ b/src/templates/items-list/items-style/fade/_variables.scss
@@ -14,7 +14,9 @@
   --vp-items-style-fade--overlay__text-decoration: none;
   --vp-items-style-fade--overlay__color: #fff;
   --vp-items-style-fade--overlay__background-color: #000;
+  --vp-items-style-fade--overlay__border-radius: 0;
   --vp-items-style-fade--overlay__padding: 2em;
+  --vp-items-style-fade--overlay__margin: 0;
   --vp-items-style-fade--overlay-items__gap: 1.5em;
 
   // Meta Icon.
