added Image Hover and Default states toggle for options
removed 'animation' collapse

--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -24,4 +24,5 @@
 @import "./components/spinner/style";
 @import "./components/tabs-control/style";
 @import "./components/tiles-selector/style";
+@import "./components/toggle-group-control/style";
 @import "./components/toggle-modal/style";
