reworked builtin controls again
added navigator-control

--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -17,6 +17,7 @@
 @import "./components/gallery-control/style";
 @import "./components/icons-selector/style";
 @import "./components/iframe-preview/style";
+@import "./components/navigator-control/style";
 @import "./components/notice/style";
 @import "./components/select-control/style";
 @import "./components/setup-wizard/style";
