--- a/src/gutenberg/components/collapse-control/style.scss
+++ b/src/gutenberg/components/collapse-control/style.scss
@@ -1,6 +1,5 @@
 .vpf-component-collapse-control {
-  margin: 0 -16px;
-  margin-bottom: -16px;
+  margin: -16px;
 
   // Toggle.
   .vpf-component-collapse-control-toggle {
@@ -9,6 +8,11 @@
     width: 100%;
     padding: 10px 16px;
     font-weight: 500;
+
+    // Remove default Gutenberg box shadow.
+    &:focus:not(:focus-visible) {
+      box-shadow: none;
+    }
 
     svg {
       margin-left: auto;
@@ -34,9 +38,17 @@
     display: none;
   }
 
-  // Fix panel padding.
+  // Fix panel styles.
   .components-panel__body {
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-top: none;
+  }
+
+  // Fix for separator width.
+  .vpf-control-group-separator {
+    margin-right: 0;
+    margin-left: 0;
   }
 
   .components-panel__body:has(+ .vpf-component-collapse-control-toggle) {
