added overlay transparent color by default to Emerge and Classic skins

--- a/src/templates/items-list/items-style/_variables.scss
+++ b/src/templates/items-list/items-style/_variables.scss
@@ -19,7 +19,7 @@
 
   // Overlay.
   --vp-items-style-default--overlay__color: #fff;
-  --vp-items-style-default--overlay__background-color: transparent;
+  --vp-items-style-default--overlay__background-color: rgba(0, 0, 0, 20%);
   --vp-items-style-default--overlay__border-radius: 0;
   --vp-items-style-default--overlay__margin: 0;
 
