--- a/src/templates/items-list/items-style/emerge/_variables.scss
+++ b/src/templates/items-list/items-style/emerge/_variables.scss
@@ -8,7 +8,7 @@
   --vp-items-style-emerge--image-hover__transform: translateY(-10px);
 
   // Image Overlay.
-  --vp-items-style-emerge--overlay__background-color: transparent;
+  --vp-items-style-emerge--overlay__background-color: rgba(0, 0, 0, 20%);
   --vp-items-style-emerge--overlay__margin: 0;
   --vp-items-style-emerge--overlay__border-radius: 0;
 
