--- a/src/gutenberg/components/navigator-control/style.scss
+++ b/src/gutenberg/components/navigator-control/style.scss
@@ -9,6 +9,13 @@
 }
 
 .vpf-component-navigator-control {
+  // Fix overflow problem.
+  margin: -16px;
+
+  > .components-navigator-screen {
+    padding: 16px;
+  }
+
   // Toggle.
   .vpf-component-navigator-control-toggles > button {
     display: flex;
@@ -47,17 +54,12 @@
   // Screen content.
   .components-navigator-screen > .components-panel__body {
     padding: 16px 0;
+    padding-bottom: 0;
   }
 
   // Fix panel padding.
   .components-panel__body {
     border-top: none;
-  }
-
-  // Fix for separator width.
-  .vpf-control-group-separator {
-    margin-right: 0;
-    margin-left: 0;
   }
 
   .components-panel__body:has(+ .vpf-component-collapse-control-toggle) {
